# constellation

./: .editorconfig  .gitignore  .travis.yml  CLA.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-COMMERCIAL.md  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml  cla.yaml
apps/movieoke/rust/: Cargo.toml
apps/movieoke/rust/src/: background.rs  lib.rs
circle_game/: Cargo.toml
circle_game/src/: circle.rs  circle_bundle.rs  components.rs  lib.rs  main.rs  regular_main.rs  wasm_main.rs
circle_game/tests/: app.rs
client/: Cargo.toml  bindings.h  build.rs  build_mac_host.sh  codegen_mac_arm64.sh  tp_client
client/codegen_pinvoke/: Main.cs  codegen.csproj
client/codegen_test/: Cargo.toml
client/codegen_test/src/: main.rs
client/codegen_wrapped/: Cargo.toml  channel.cs.tpl  keyframe.cs.tpl  opaque_template.cs.tpl  state.cs.tpl  state_id.cs.tpl  template.cs.tpl
client/codegen_wrapped/src/: channel.rs  channel_template.rs  class_data_templates.rs  keyframe_template.rs  lib.rs  main.rs  state_template.rs  template_keyframe.rs  template_state.rs  template_state_handle.rs  template_state_id.rs  type_info.rs
client/contract_example/: Cargo.toml
client/contract_example/cs/: contract_example.csproj
client/contract_example/cs/src/: .gitignore  ExampleContract.cs  contract_example.csproj
client/contract_example/rust/: Cargo.toml
client/contract_example/rust/src/: lib.rs  states.rs
client/contract_example/src/: lib.rs
client/contract_macro/: Cargo.toml
client/contract_macro/src/: lib.rs
client/contract_macro/tests/: test.rs
client/cs/codegen/: Main.cs  codegen.csproj
client/cs/src/: Baseline.cs  Channel.cs  Common.cs  Contract.cs  ExampleContract.cs  Keyframe.cs  ObjectHandle.cs  RBox.cs  RString.cs  RVec_Keyframe.cs  StateAccessors.cs  StateBindings.cs  client.cs  client.csproj  template.cs
client/cs/tests/: Baseline.cs  Channels.cs  Contract.cs  Keyframe.cs  Object.cs  State.cs  StateId.cs  String.cs  tests.csproj
client/rust/: Cargo.toml
client/rust/src/: baseline.rs  engine.rs  lib.rs  link.rs  object.rs  realm.rs
client/rust/src/action/: property.rs
client/rust/src/contract/: mod.rs
client/rust/src/contract/properties/: mod.rs  traits.rs
client/rust/src/contract/properties/channels/: channel.rs  handle.rs  misc.rs  mod.rs
client/rust/src/contract/properties/channels/dyn_channel/: from_impls.rs
client/rust/src/contract/properties/dynamic/: __macro.rs  eq_impls.rs  from_impls.rs  mod.rs  primitive.rs
client/rust/src/contract/properties/states/: dyn_handle.rs  dyn_state.rs  handle.rs  id.rs  iter.rs  mod.rs
client/rust/src/time/: mod.rs
client/serialize/: README.md
client/serialize/flatbuffers/: all.fbs  baseline.fbs  contract.fbs  object.fbs  primitive.fbs  state.fbs
client/serialize/rust/: Cargo.toml  build.rs
client/serialize/rust/src/: idx_mapper.rs  impls.rs  lib.rs
client/serialize/rust/src/deserializer/: a.rs  eq_impl.rs  mod.rs  new.rs  old.rs
client/serialize/rust/src/deserializer/new/: contracts.rs  mod.rs  null_contract.rs  objects.rs  states.rs
client/serialize/rust/src/serializer/: handle_map.rs  mod.rs
client/serialize/rust/src/types/: eq_impl.rs  from_impl.rs  mod.rs
client/serialize/rust/tests/: round_trip.rs
client/src/: action.rs  baseline.rs  contract.rs  engine.rs  lib.rs  link.rs  object.rs  realm.rs  snapshot.rs
client/src/action/: mod.rs  property.rs
client/src/contract/: mod.rs
client/src/contract/ffi_testing_contract/: mod.rs
client/src/contract/properties/: channel.rs  data.rs  dyn_macro.rs  mod.rs  state.rs  traits.rs
client/src/contract/properties/channels/: channel.rs  dyn_channel.rs  dyn_handle.rs  handle.rs  mod.rs
client/src/contract/properties/channels/dyn_channel/: mod.rs
client/src/contract/properties/data/: dyn_data.rs  dyn_property.rs  mod.rs
client/src/contract/properties/dynamic/: __macro.rs  borrow_impls.rs  eq_impls.rs  from_impls.rs  mod.rs  primitive.rs  property.rs  vec.rs
client/src/contract/properties/states/: dyn_handle.rs  handle.rs  id.rs  mod.rs
client/src/datastructures/: arena.rs  mod.rs
client/src/engine/: mod.rs
client/src/properties/: channel.rs  data.rs  mod.rs  state.rs
client/src/realm/: mod.rs
client/src/time/: mod.rs
contract_macro/: Cargo.toml
contract_macro/src/: lib.rs
contract_macro/tests/: test.rs
contracts/: ObjectBase.tpcontract  Xformable.tpcontract
crates/better_borrow/: Cargo.toml
crates/better_borrow/examples/: dyn_type.rs
crates/better_borrow/src/: lib.rs
crates/cs_codegen/: Cargo.toml
crates/cs_codegen/src/: lib.rs  main.rs
crates/datastructures/arena/: Cargo.toml
crates/datastructures/arena/src/: lib.rs
crates/rsharp/: README.md
crates/rsharp/codegen/: Cargo.toml  rbox.cs.tpl
crates/rsharp/codegen/src/: codegen.rs  main.rs
crates/rsharp/cs/example/: Program.cs  example.csproj  libtp_rsharp.dylib
crates/rsharp/macro/: Cargo.toml
crates/rsharp/rust/: Cargo.toml  rbox.cs.tpl
crates/rsharp/rust/macro/: Cargo.toml
crates/rsharp/rust/macro/src/: remangle.rs
crates/rsharp/rust/src/: codegen.rs  lib.rs  main.rs  primitives.rs  rbox.rs  rvec.rs  string.rs  types.rs  vec.rs
crates/rsharp/src/: monomorphize.rs
cross_compilation/: setup.sh
csharp-ffi/: Engine.cs  EngineTester.cs  PlatformTypes.cs
datastructures/arena/: Cargo.toml
datastructures/arena/src/: lib.rs
demos/circle_game/: Cargo.toml  README.md  package-lock.json  package.json
demos/circle_game/src/: circle.rs  components.rs  lib.rs  main.rs  wasm_main.rs
demos/unity_states/cs/: .gitignore  BallContract.cs  BallStates.cs  unity_states.csproj
demos/unity_states/rust/: Cargo.toml
demos/unity_states/rust/src/: lib.rs
engine/: Cargo.toml
platform/: Cargo.toml
platform/src/: ffi.rs  lib.rs  result_code.rs  test_set.rs
platform/src/result_code/: mod.rs
platform/tp/contracts/: ObjectBase.tpcontract  Xformable.tpcontract  XformableStatic.tpcontract
serialization/flatbuffers/: all.fbs  contract.fbs  properties.fbs  state.fbs
signatures/v1/: cla.json
(+47 files in other folders)
