[workspace]
resolver = "2" # As of Nov 2021, rust doesn't seem to use new resolver if you don't specify this

members = [
    "circle_game",
    "client/rust",
    "client/codegen_wrapped",
    "contract_macro",
    "crates/datastructures/arena",
    "crates/better_borrow",
    "crates/rsharp/rust",
    "crates/rsharp/rust/macro",
    "demos/unity_states/rust",
]

[profile.release]
# This makes compiling slower but allows for more optimization opportunities, so
# it's only enabled in release mode.
lto = true
