[workspace]
resolver = "2" # As of Nov 2021, rust doesn't seem to use new resolver if you don't specify this

members = [
    "client/codegen_wrapped",
    "client/rust",
    "contract_macro",
    "crates/better_borrow",
    "crates/datastructures/arena",
    "crates/rsharp/rust",
    "crates/rsharp/rust/macro",
    "apps/movieoke/rust",
    "demos/circle_game",
    "demos/unity_states/rust",
]

[profile.release]
# This makes compiling slower but allows for more optimization opportunities, so
# it's only enabled in release mode.
lto = true
