[package]
name = "circle_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tp_client = { path = "../client" }
bevy_prototype_lyon = "0.3.1"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "render",
    "png",
    "bevy_wgpu",
] }
[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.24", features = ["x11"] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "render",
    "png",
] }
bevy_webgl2 = "0.5"
tracing-wasm = "=0.2.0" # Tracing-wasm broke semver, this locks to the working version

# getrandom = { version = "0.2", features = ["wasm-bindgen"] }
