[package]
name = "tp_contract_macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
lazy_static = "1"

[dev-dependencies]
tp_client = { path = "../client" }
