[package]
name = "constellation"
version = "0.0.0"
edition = "2021"
rust-version = "1.58"
# Prevent accidental `cargo publish`
publish = false

[dependencies]
arena = { path = "../../crates/datastructures/arena" }
crossbeam-channel = "0.5"
derive_more = "0.99"
enum_dispatch = "0.3"
eyre = "0.6"
paste = "1"
rand = "0.8"
tracing = "0.1"
typemap = "0.3"
tp_contract_macro = { path = "../contract_macro" }
log = "0.4"
itertools = "0.10"
keyframe = "1"
better_borrow = { path = "../../crates/better_borrow" }
rsharp = { path = "../../crates/rsharp/rust", optional = true }
safer-ffi = { version = "0.0.10", features = ["proc_macros"], optional = true }
ref-cast = "1"
lazy_static = "1"

[features]
default = ["c_api"]
c_api = ["rsharp", "safer-ffi/headers"]
