[package]
name = "cs_codegen"
version = "0.0.0"

description = "Generates C# code for wrapping cppsharp low level code"

edition = "2021"
# Prevent accidental `cargo publish`
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
syn = { version = "1", features = ["derive"] }
