[package]
name = "tp_serialize"
version = "0.0.0"
edition = "2021"
rust-version = "1.58"
# Prevent accidental `cargo publish`
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "2"
tp_client = { path = "../../rust" }
eyre = "0.6"
bimap = "0.6"
