[package]
name = "tp_serialize"
version = "0.0.0"
edition = "2021"
rust-version = "1.58"
# Prevent accidental `cargo publish`
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "2"
tp_client = { path = "../../rust" }
eyre = "0.6"
bimap = "0.6"
paste = "1"
dynpath = { git = "https://github.com/TheButlah/dynpath", rev = "0058f9d5fd28cc9760f8c4cbb99974e060297dde" }

[dev-dependencies]
tp_contract_example = {path = "../../contract_example"}

[build-dependencies]
flatc-rust = "0.2"
