[package]
name = "rsharp"
version = "0.0.0"
edition = "2021"
# Prevent accidental `cargo publish`
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rsharp_macro = { path = "macro" }
paste = "1"
safer-ffi = { version = "0.0.10", features = ["proc_macros", "headers"] }
handlebars = "4.2"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
derive_more = "0.99"
ref-cast = "1"
