[package]
name = "unity_states"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
constellation = { path = "../../../client/rust" }
safer-ffi = { version = "0.0.10", features = ["headers"] }
