[package]
name = "rsharp_macro"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tp_rsharp_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full", "visit-mut"] }
quote = "1"
find-crate = "0.6"
lazy_static = "1"
